[init] project setup

--- a/build.gradle
+++ b/build.gradle
@@ -1,41 +1,52 @@
-plugins {
-	id 'java'
-	id 'org.springframework.boot' version '3.4.3'
-	id 'io.spring.dependency-management' version '1.1.7'
-}
-
-group = 'com.example'
-version = '0.0.1-SNAPSHOT'
-
-java {
-	toolchain {
-		languageVersion = JavaLanguageVersion.of(23)
+	plugins {
+		id 'java'
+		id 'org.springframework.boot' version '3.4.3'
+		id 'io.spring.dependency-management' version '1.1.7'
 	}
-}
 
-configurations {
-	compileOnly {
-		extendsFrom annotationProcessor
+	group = 'com.example'
+	version = '0.0.1-SNAPSHOT'
+
+	java {
+		toolchain {
+			languageVersion = JavaLanguageVersion.of(21)
+		}
 	}
-}
 
-repositories {
-	mavenCentral()
-}
+	configurations {
+		compileOnly {
+			extendsFrom annotationProcessor
+		}
+	}
 
-dependencies {
-	implementation 'org.springframework.boot:spring-boot-starter-web'
-	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
-	implementation("mysql:mysql-connector-java:8.0.33")
-	compileOnly 'org.projectlombok:lombok'
-	developmentOnly 'org.springframework.boot:spring-boot-devtools'
-	runtimeOnly 'com.mysql:mysql-connector-j'
-	annotationProcessor 'org.projectlombok:lombok'
-	testImplementation 'org.springframework.boot:spring-boot-starter-test'
-	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
+	repositories {
+		mavenCentral()
+	}
 
-}
+	dependencies {
+		implementation 'org.apache.commons:commons-lang3:3.12.0'
+		implementation 'org.springframework.boot:spring-boot-starter-web'
+		implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+		implementation("mysql:mysql-connector-java:8.0.33")
+		implementation 'org.springframework.boot:spring-boot-starter-security' // 시큐리티
+		implementation 'org.springframework.boot:spring-boot-starter-thymeleaf' // 타임리프
+		compileOnly 'org.projectlombok:lombok'
+		developmentOnly 'org.springframework.boot:spring-boot-devtools'
+		runtimeOnly 'com.mysql:mysql-connector-j'
+		annotationProcessor 'org.projectlombok:lombok'
+		testImplementation 'org.springframework.boot:spring-boot-starter-test'
+		testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
+		testImplementation 'org.mockito:mockito-core'
 
-tasks.named('test') {
-	useJUnitPlatform()
-}
+
+
+	}
+
+	tasks.named('test') {
+		useJUnitPlatform()
+	}
+
+
+	tasks.withType(JavaCompile) {
+		options.compilerArgs << "-parameters" // 반드시 필요 (RequestParam 이름 자동 인식)
+	}
