--- a/build.gradle
+++ b/build.gradle
@@ -29,14 +29,21 @@
 		implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 		implementation("mysql:mysql-connector-java:8.0.33")
 		implementation 'org.springframework.boot:spring-boot-starter-security' // 시큐리티
-		implementation 'org.springframework.boot:spring-boot-starter-thymeleaf' // 타임리프
+		implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
+		implementation 'org.springframework.boot:spring-boot-starter-actuator'// 타임리프
 		compileOnly 'org.projectlombok:lombok'
 		developmentOnly 'org.springframework.boot:spring-boot-devtools'
 		runtimeOnly 'com.mysql:mysql-connector-j'
 		annotationProcessor 'org.projectlombok:lombok'
 		testImplementation 'org.springframework.boot:spring-boot-starter-test'
+		testImplementation 'com.jayway.jsonpath:json-path'
 		testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 		testImplementation 'org.mockito:mockito-core'
+
+		//웹토큰
+		implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
+		runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
+		runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5' // or jjwt-gson
 
 
 
