[feat] url 생성 및 찾기

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -22,3 +22,10 @@ spring.jpa.properties.hibernate.transaction.jta.platform=org.hibernate.engine.tr
 
 # vue history mode
 spring.mvc.pathmatch.matching-strategy=ant_path_matcher
+
+spring.devtools.restart.enabled=false
+
+spring.jackson.serialization.fail-on-empty-beans=false
+
+# application.properties
+logging.level.com.example.url_shortener.security=DEBUG
